--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,11 +17,11 @@ platforms:
     driver_config:
       network:
       - ["private_network", {ip: "33.33.33.11"}]
-#      - ["forwarded_port", {guest: 80, host: 8080}]
 
 suites:
   - name: webapp
     run_list:
+      - recipe[test-helper::default]
       - recipe[app::apt]
       - recipe[curl]
       - recipe[app::apache2]
