--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,6 +1,8 @@
 ---
 driver:
   name: vagrant
+  synced_folders:
+    - [".", "/vagrant"]
 
 provisioner:
   name: chef_solo
@@ -16,7 +18,7 @@ platforms:
 #      provider: parallels
     driver_config:
       network:
-      - ["private_network", {ip: "33.33.33.11"}]
+      - ["private_network", {ip: "192.168.100.10"}]
 
 suites:
   - name: webapp
@@ -26,6 +28,7 @@ suites:
       - recipe[curl]
       - recipe[app::apache2]
       - recipe[app::mysql]
+      - recipe[memcached]
     attributes:
       mysql:
         server_root_password: "root"
