Switching over to php5-fpm with apache 2.4 including initial symfony2 config and route testing

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -26,6 +26,7 @@ suites:
       - recipe[test-helper::default]
       - recipe[app::apt]
       - recipe[curl]
+      - recipe[app::php-fpm]
       - recipe[app::apache2]
       - recipe[app::mysql]
       - recipe[memcached]
