--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -34,4 +34,4 @@ suites:
       - recipe[app::mailcatcher]
       - recipe[composer]
       - recipe[phpunit]
-      - recipe[nodejs]
+      - recipe[app::nodejs]
