--- a/package.json
+++ b/package.json
@@ -21,11 +21,12 @@
   "homepage": "https://github.com/phillipsnick/nickphillips.co",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-contrib-cssmin": "^0.10.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.12.0",
+    "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-modernizr": "^0.6.0",
-    "grunt-contrib-cssmin": "^0.10.0"
+    "grunt-symfony2": "^0.4.0"
   }
 }
