VMware fix to use NFS over shared folders

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -2,7 +2,7 @@
 driver:
   name: vagrant
   synced_folders:
-    - [".", "/vagrant"]
+    - [".", "/vagrant", "nfs: true"]
 
 provisioner:
   name: chef_solo
