--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-less": "^0.12.0",
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-lesslint": "^1.1.13",
     "grunt-modernizr": "^0.6.0",
     "grunt-symfony2": "^0.4.0"
   }
