--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -64,3 +64,14 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+knp_menu:
+    twig: true
+
+cmf_core:
+    persistence:
+        phpcr:
+            enabled: true
+
+sonata_block:
+    default_contexts: [cms]
