--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,6 +1,7 @@
 imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
+    - { resource: sonata_core.yml }
 
 framework:
     #esi:             ~
@@ -65,13 +66,18 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
-knp_menu:
-    twig: true
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: App\DefaultBundle\Entity\User
 
-cmf_core:
-    persistence:
-        phpcr:
-            enabled: true
+sonata_admin:
+    security:
+        handler: sonata.admin.security.handler.role
 
 sonata_block:
     default_contexts: [cms]
+    blocks:
+        # Enable the SonataAdminBundle block
+        sonata.admin.block.admin_list:
+            contexts:   [admin]
