--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,10 @@
         "sensio/distribution-bundle": "~3.0",
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
-        "symfony-cmf/symfony-cmf": "1.2.*",
-        "jackalope/jackalope-doctrine-dbal": "1.1.*"
+        "friendsofsymfony/user-bundle": "~1.3",
+        "sonata-project/admin-bundle": "~2.3",
+        "sonata-project/doctrine-orm-admin-bundle": "~2.3",
+        "doctrine/doctrine-fixtures-bundle": "~2.2"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
