--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,10 @@
         "friendsofsymfony/user-bundle": "~1.3",
         "sonata-project/admin-bundle": "~2.3",
         "sonata-project/doctrine-orm-admin-bundle": "~2.3",
-        "doctrine/doctrine-fixtures-bundle": "~2.2"
+        "doctrine/doctrine-fixtures-bundle": "~2.2",
+        "sonata-project/user-bundle": "~2.2",
+        "knplabs/knp-menu": "~1.1",
+        "knplabs/knp-menu-bundle": "~1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
