--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -1,5 +1,6 @@
 imports:
     - { resource: parameters.yml }
+    - { resource: doctrine.yml }
     - { resource: security.yml }
     - { resource: sonata.yml }
 
@@ -35,37 +36,8 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [ ]
-    #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        #closure:
-        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
-        #yui_css:
-        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
-
-# Doctrine Configuration
-doctrine:
-    dbal:
-        driver:   "%database_driver%"
-        host:     "%database_host%"
-        port:     "%database_port%"
-        dbname:   "%database_name%"
-        user:     "%database_user%"
-        password: "%database_password%"
-        charset:  UTF8
-
-        types:
-            json: Sonata\Doctrine\Types\JsonType
-
-    orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        auto_mapping: true
-        #entity_managers:
-       #     default:
-         #       mappings:
-         #           AppDefaultBundle: ~
-                    #ApplicationSonataUserBundle: ~
-                    #SonataUserBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -82,7 +54,7 @@ fos_user:
 
     group:
         group_class:   App\DefaultBundle\Entity\Group
-        group_manager: sonata.user.orm.group_manager                    # If you're using doctrine orm (use sonata.user.mongodb.user_manager for mongodb)
+        group_manager: sonata.user.orm.group_manager
 
     service:
         user_manager: sonata.user.orm.user_manager
