--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "doctrine/doctrine-fixtures-bundle": "~2.2",
         "sonata-project/user-bundle": "~2.2",
         "knplabs/knp-menu": "~1.1",
-        "knplabs/knp-menu-bundle": "~1.1"
+        "knplabs/knp-menu-bundle": "~1.1",
+        "sonata-project/news-bundle": "~2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
