More attempts to integrate the news/blog bundle #27

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,6 +6,14 @@ news:
     resource: '@SonataNewsBundle/Resources/config/routing/news.xml'
     prefix: /news
 
+gallery:
+    resource: '@SonataMediaBundle/Resources/config/routing/gallery.xml'
+    prefix: /media/gallery
+
+media:
+    resource: '@SonataMediaBundle/Resources/config/routing/media.xml'
+    prefix: /media
+
 sonata_user_security:
     resource: "@SonataUserBundle/Resources/config/routing/sonata_security_1.xml"
 
