--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "sonata-project/user-bundle": "~2.2",
         "knplabs/knp-menu": "~1.1",
         "knplabs/knp-menu-bundle": "~1.1",
-        "sonata-project/news-bundle": "~2.3"
+        "sonata-project/news-bundle": "~2.3",
+        "sonata-project/media-bundle": "~2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
