--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
         "knplabs/knp-menu-bundle": "~1.1"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3"
+        "sensio/generator-bundle": "~2.3",
+        "squizlabs/php_codesniffer": "~1.5"
     },
     "scripts": {
         "post-root-package-install": [
