--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "grunt-modernizr": "^0.6.0",
     "grunt-phpcs": "^0.2.3",
     "grunt-phplint": "0.0.5",
+    "grunt-shell": "^1.1.1",
     "grunt-symfony2": "^0.4.0",
     "grunt-update-json": "^0.2.1",
     "load-grunt-tasks": "^1.0.0"
