Creating JavaScript noscript tag error and styling with ability to dismiss message and track dismissal in the session

--- a/src/App/DefaultBundle/Resources/config/routing.yml
+++ b/src/App/DefaultBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 default_homepage:
     path:     /
     defaults: { _controller: AppDefaultBundle:Default:index }
+
+noscript:
+    path:     /noscript/hide
+    defaults: { _controller: AppDefaultBundle:Default:noscript }
