--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": " "
+    "test": "grunt karma"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,7 @@
     "karma-chrome-launcher": "^0.1.5",
     "karma-cli": "0.0.4",
     "karma-jasmine": "^0.3.0",
+    "karma-phantomjs-launcher": "^0.1.4",
     "load-grunt-tasks": "^1.0.0"
   }
 }
