--- a/bower.json
+++ b/bower.json
@@ -21,5 +21,8 @@
     "angular": "~1.3.1",
     "angular-bootstrap": "~0.11.2",
     "bootstrap": "~3.3.0"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.3.3"
   }
 }
