Working to develop footer with angularjs loading tweets in WIP #62

--- a/src/App/DefaultBundle/Resources/config/routing.yml
+++ b/src/App/DefaultBundle/Resources/config/routing.yml
@@ -5,3 +5,7 @@ default_homepage:
 noscript:
     path:     /noscript/hide
     defaults: { _controller: AppDefaultBundle:Default:noscript }
+
+tweets:
+    path:     /tweets
+    defaults: { _controller: AppDefaultBundle:Twitter:tweets }
