Loading of partials into $templateCache for AngularJS resolves #61

--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,10 @@ chef/config/dev.json
 /app/cache/*
 /app/config/parameters.yml
 /app/logs/*
+/app/tmp/*
 !app/cache/.gitkeep
 !app/logs/.gitkeep
+!app/tmp/.gitkeep
 /build/
 /vendor/
 /bin/
