--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
   },
   "require": {
     "php": ">=5.3.3",
-    "symfony/symfony": "2.5.*",
-    "doctrine/orm": "~2.2,>=2.2.3",
-    "doctrine/doctrine-bundle": "~1.2",
-    "twig/extensions": "~1.0",
+    "symfony/symfony": "~2.6",
+    "doctrine/orm": "~2.4",
+    "doctrine/doctrine-bundle": "~1.3",
+    "twig/extensions": "~1.2",
     "symfony/assetic-bundle": "~2.3",
     "symfony/swiftmailer-bundle": "~2.3",
     "symfony/monolog-bundle": "~2.4",
