--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "doctrine/doctrine-fixtures-bundle": "~2.2",
     "sonata-project/user-bundle": "~2.2",
     "knplabs/knp-menu": "~1.1",
-    "knplabs/knp-menu-bundle": "~1.1"
+    "knplabs/knp-menu-bundle": "~1.1",
+    "abraham/twitteroauth": "~0.2"
   },
   "require-dev": {
     "sensio/generator-bundle": "~2.3",
